fix: only datomic version as build arg

--- a/images/datomic/Dockerfile
+++ b/images/datomic/Dockerfile
@@ -1,11 +1,8 @@
 FROM amazoncorretto:17
 
-ARG DATOMIC_CONFIG
-ENV DATOMIC_CONFIG=$DATOMIC_CONFIG
+RUN yum install -y unzip && yum clean all
 
 ARG DATOMIC_VERSION=1.0.6735
-
-RUN yum install -y unzip && yum clean all
 
 WORKDIR /opt/
 RUN curl -O https://datomic-pro-downloads.s3.amazonaws.com/${DATOMIC_VERSION}/datomic-pro-${DATOMIC_VERSION}.zip
@@ -13,4 +10,6 @@ RUN unzip datomic-pro-${DATOMIC_VERSION}.zip
 RUN rm datomic-pro-${DATOMIC_VERSION}.zip
 RUN mv datomic-pro-${DATOMIC_VERSION} datomic
 
-ENTRYPOINT /opt/datomic/bin/transactor $DATOMIC_CONFIG
+ENV JVM_OPTS="-Xmx1g -Xms1g"
+
+ENTRYPOINT /opt/datomic/bin/transactor ${JVM_OPTS} /transactor.properties
